correction lien + ajout d'une favicon

--- a/CSS/information.css
+++ b/CSS/information.css
@@ -54,7 +54,7 @@ div.maps {
 .imgicons {
     padding-left: 15%;
     padding-right: 50%;
-    position: absolute;
+    /* position: absolute; */
     
 }
 .lieninsta a {
