--- a/CSS/mention.css
+++ b/CSS/mention.css
@@ -1,3 +1,47 @@
 h2 {
     padding-top: 10%;
 }
+
+h3{
+    padding-left: 10%;
+    padding-top: 5%;
+    padding-bottom: 2%;
+    font-size: 30px;
+    font-family: 'HermeneusOne';
+}
+p {
+    font-size: 20px;
+    font-family: 'Lateef-Regular';
+}
+
+.info p {
+    padding-left: 15%;
+    padding-right: 15%;
+    color: black;
+}
+.hebergeur h3 {
+    padding-top: 10%;
+
+}
+.hebergeur p {
+    padding-left: 15%;
+    padding-right: 15%;
+    color: black;
+}
+
+.propriété p {
+    padding-left: 15%;
+    padding-right: 15%;
+    color: black;
+}
+
+.donneeperso p  {
+    padding-left: 15%;
+    padding-right: 15%;
+    color: black;
+}
+.contacter p {
+    padding-left: 15%;
+    padding-right: 15%;
+    color: black;
+}
