--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -4,45 +4,51 @@
     background-color:#223055  ;
 }
 
-.accueil p {
+.accueil a {
     padding-left: 10%;
-    position: absolute;
+    padding-top: 2%;
     text-decoration: none;
     color: white;
+    font-size: 20px;
 }
 
-.info p {
+.info a {
     padding-left: 25%;
-    position: absolute;
+    padding-top: 2%;
     text-decoration: none;
     color: white;
+    font-size: 20px;
 }
 
-.club3 p {
+.club3 a {
     padding-left: 40%;
-    position: absolute;
+    padding-top: 2%;
     text-decoration: none;
     color: white;
+    font-size: 20px;
 }
-.mention p {
+.mention a {
     padding-left: 52%;
-    position: absolute;
+    padding-top: 2%;
     text-decoration: none;
     color: white;
+    font-size: 20px;
 }
 
 .Reseaux p {
-    padding-left: 70%;
+    padding-left: 70%;    
+    padding-top: 7px;
+    position: absolute;
+    text-decoration: none;
     color: white;
+    font-size: 20px;
 }
 .insta {
-    position: absolute;
     padding-left: 70%;
-    padding-top: 3%;
+    padding-top: 5%;
 }
 
 .facebook {
     padding-left: 76%;
-    padding-top: 3%;
-    position: absolute;
+    padding-top: 5%;
 }
