--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,49 +1,80 @@
 .footer {
     padding-top: 5%;
-    padding-bottom: 10%;
+    padding-bottom: 5%;
     background-color:#223055  ;
 }
 
 .accueilfooter  {
-    padding-left: 15%;
+    padding-left: 5%;
     text-decoration: none;
     color: white;
     font-size: 20px;
 }
 
 .info  {
-    padding-left: 15%;
+    padding-left: 10%;
     text-decoration: none;
     color: white;
     font-size: 20px;
 }
 
 .club3  {
-    padding-left: 15%;
+    padding-left: 10%;
     text-decoration: none;
     color: white;
     font-size: 20px;
 }
 .mention  {
-    padding-left: 15%;
+    
+    padding-left: 10%;
     text-decoration: none;
     color: white;
     font-size: 20px;
 }
 
-.Reseaux  {
-    padding-left: 20%;  
-    padding-top: 6%;  
-    position: absolute;
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-}
 .insta img {
-    padding-left: 50%;
-    padding-top: 5%;
+    padding-left: 20%;
+    
 }
 
 .facebook {
     padding-left: 7%;
+}
+
+
+
+@media (max-width:480px) {
+
+    .accueilfooter {
+        font-size: 16px;
+        padding-left: 10%;
+
+    }
+    .info {
+        padding-left: 35%;
+        font-size: 16px;
+        
+    }
+    .club3 {
+        padding-left:10%;
+        font-size: 16px;
+    }
+    .mention {
+        font-size: 16px;
+        padding-left: 40%;
+    }
+
+.insta img {
+    padding-left: 60%;
+    padding-top: 10%;
+    width: 10%;
+    height: 10%;
+}
+.facebook img {
+    width: 10%;
+    height: 10%;
+    padding-left: 3%;
+    
+}
+
 }
