--- a/index.css
+++ b/index.css
@@ -564,8 +564,6 @@ p{
     padding-left: 60%;
     padding-top: 20%;
     position: absolute;
-    /* max-width: 10%;
-    max-height:10% ; */
 }
 
 
@@ -956,46 +954,52 @@ p{
 
 .infrastructure {
     position: relative;
+    
 }
 
 .manège  img {
-    padding-left: 2%;
-    padding-top: 5%;
+    top: 0;
+    left: 10vh;
+    z-index: 0;
     position: absolute;
-    max-width: 165%;
-    max-height: 165%;
+    height: 190%;
+    width: 190%;
+
 }
 .manège p {
     opacity: 0%;
-   
 }
 
 .carrière img {
     
     position: absolute;
-    max-width:165%;
-    max-height: 165%;
+    top: 25vh;
+    left: 10vh;
+    z-index: 0;
 }
 .carrière p {
     opacity: 0%;
 }
 .ecurie img {
-    padding-left: 2%;
+    
+    top: 50vh;
+    left: 10vh;
+    z-index: 0;
     position: absolute;
-    padding-top: 25%;
-    max-width:165%;
-    max-height: 165%;
+    
+    
 }
 .ecurie p {
     opacity: 0%;
 }
 .bureau img {
-    
-    padding-top: 7%;
+    top: 75vh;
+    left: 10vh;
+    z-index: 0;
     position: absolute;
-    max-width:60%;
-    max-height: 60%;
-   
+    height: 190%;
+    width: 190%;
+
 }
 .bureau p {
     opacity: 0%;
@@ -1006,7 +1010,7 @@ p{
 /* Section page club */
 
 .club {
-    padding-top: 50%;
+    padding-top: 200%;
 }
 
 
