--- a/index.css
+++ b/index.css
@@ -44,9 +44,10 @@ h2 {
 /* Placement de l'image */
 
 .imgPresentation{
-    max-width: 50%;
-    max-height: 50%;
-    padding-left: 5%;
+
+    max-width: 80%;
+    max-height: 80%;
+    margin-left: 5%;
     position: absolute;
 }
 
